--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+  <script>
+  {{flutter_js}}
+      {{flutter_build_config}}
+
+      _flutter.loader.load({
+        config: {
+          hostElement: document.getElementById('flutter_host'),
+        }
+      });
+
+
+  </script>
 </body>
 </html>
